<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Surasek Nusati <surasek@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.skyousuke.ivtool.view.CustomRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                android:theme="@android:style/Theme.Holo"
                                                android:background="@color/white"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                                android:paddingRight="@dimen/activity_horizontal_margin"
                                                android:paddingTop="@dimen/activity_vertical_margin"
                                                android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:id="@+id/result_pokemon"/>

    <LinearLayout
        android:id="@+id/layout_result_cp_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/result_pokemon">

        <TextView
            style="@style/NormalText"
            android:layout_width="@dimen/result_hp_cp_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/normal_text_size"
            android:gravity="center"
            android:id="@+id/result_cp"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="@dimen/result_hp_cp_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:textSize="@dimen/normal_text_size"
            android:gravity="center"
            android:id="@+id/result_hp"/>

    </LinearLayout>

    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/max_iv"
        android:layout_below="@id/layout_result_cp_hp"
        android:id="@+id/result_label_max_iv"/>

    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/min_iv"
        android:layout_below="@id/result_label_max_iv"
        android:id="@+id/result_label_min_iv"/>

    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:layout_alignTop="@+id/result_label_max_iv"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:id="@+id/result_max_iv"/>

    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:layout_alignTop="@+id/result_label_min_iv"
        android:layout_alignEnd="@+id/result_max_iv"
        android:id="@+id/result_min_iv"/>

    <ProgressBar
        style="@style/CustomProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/result_progress_height"
        android:id="@+id/progress_result_max_iv"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:max="100"
        android:layout_marginTop="2dp"
        android:layout_alignTop="@+id/result_label_max_iv"
        android:layout_toEndOf="@+id/result_label_max_iv"
        android:layout_toStartOf="@id/result_max_iv"/>

    <ProgressBar
        style="@style/CustomGreyProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/result_progress_height"
        android:id="@+id/progress_result_min_iv"
        android:max="100"
        android:layout_marginTop="2dp"
        android:layout_alignTop="@+id/result_label_min_iv"
        android:layout_alignStart="@+id/progress_result_max_iv"
        android:layout_alignEnd="@+id/progress_result_max_iv"/>

    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_below="@id/progress_result_min_iv"
        android:layout_centerHorizontal="true"
        android:id="@+id/result_combination"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_combination"
        android:layout_marginTop="@dimen/vertical_margin"
        android:paddingTop="@dimen/table_vertical_padding"
        android:paddingBottom="@dimen/table_vertical_padding"
        android:paddingStart="@dimen/table_horizontal_padding"
        android:paddingEnd="@dimen/table_horizontal_padding"
        android:background="@color/dark_gray"
        android:id="@+id/list_result_header">

        <TextView
            style="@style/TableHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/level"/>

        <TextView
            style="@style/TableHeaderText"
            android:layout_height="wrap_content"
            android:text="@string/attack"/>

        <TextView
            style="@style/TableHeaderText"
            android:layout_height="wrap_content"
            android:text="@string/defense"/>

        <TextView
            style="@style/TableHeaderText"
            android:layout_height="wrap_content"
            android:text="@string/stamina"/>

        <TextView
            style="@style/TableHeaderText"
            android:layout_height="wrap_content"
            android:text="@string/perfection"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_result_iv"
        android:layout_below="@+id/list_result_header"
        android:layout_above="@+id/button_result_close"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:background="@drawable/custom_button"
        android:paddingStart="@dimen/button_horizontal_padding"
        android:paddingEnd="@dimen/button_horizontal_padding"
        android:paddingTop="@dimen/button_vertical_padding"
        android:paddingBottom="@dimen/button_vertical_padding"
        android:layout_marginTop="@dimen/vertical_margin"
        android:textColor="@color/white"
        android:text="@string/close"
        android:id="@+id/button_result_close"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</com.skyousuke.ivtool.view.CustomRelativeLayout>